--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,7 +169,8 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 20px;
+		margin-left: 25px;
+		margin-right: 25px;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
